--- a/Data Science Task/Task 3/Task_3_DS.ipynb
+++ b/Data Science Task/Task 3/Task_3_DS.ipynb
@@ -5,10 +5,7 @@
     "colab": {
       "name": "Task 3 DS",
       "provenance": [],
-      "collapsed_sections": [
-        "xpXdowrE9DxW",
-        "tatLCVx88riS"
-      ],
+      "collapsed_sections": [],
       "toc_visible": true
     },
     "kernelspec": {
@@ -46,7 +43,7 @@
         "import pandas as pd\n",
         "import seaborn as sns"
       ],
-      "execution_count": 196,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -61,13 +58,158 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "w7LmciDK8QrU"
+        "id": "w7LmciDK8QrU",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 326
+        },
+        "outputId": "63f0e43d-c322-459e-cccd-23e5e79623ed"
       },
       "source": [
-        "dataset = pd.read_csv('https://raw.githubusercontent.com/preyash2047/TSF_Task/main/Data%20Science%20Task/Task%203/SampleSuperstore.csv')"
+        "dataset = pd.read_csv('https://raw.githubusercontent.com/preyash2047/TSF_Task/main/Data%20Science%20Task/Task%203/SampleSuperstore.csv')\r\n",
+        "dataset.head()"
       ],
-      "execution_count": 202,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Ship Mode</th>\n",
+              "      <th>Segment</th>\n",
+              "      <th>Country</th>\n",
+              "      <th>City</th>\n",
+              "      <th>State</th>\n",
+              "      <th>Postal Code</th>\n",
+              "      <th>Region</th>\n",
+              "      <th>Category</th>\n",
+              "      <th>Sub-Category</th>\n",
+              "      <th>Sales</th>\n",
+              "      <th>Quantity</th>\n",
+              "      <th>Discount</th>\n",
+              "      <th>Profit</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Second Class</td>\n",
+              "      <td>Consumer</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>Henderson</td>\n",
+              "      <td>Kentucky</td>\n",
+              "      <td>42420</td>\n",
+              "      <td>South</td>\n",
+              "      <td>Furniture</td>\n",
+              "      <td>Bookcases</td>\n",
+              "      <td>261.9600</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>41.9136</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Second Class</td>\n",
+              "      <td>Consumer</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>Henderson</td>\n",
+              "      <td>Kentucky</td>\n",
+              "      <td>42420</td>\n",
+              "      <td>South</td>\n",
+              "      <td>Furniture</td>\n",
+              "      <td>Chairs</td>\n",
+              "      <td>731.9400</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>219.5820</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Second Class</td>\n",
+              "      <td>Corporate</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>Los Angeles</td>\n",
+              "      <td>California</td>\n",
+              "      <td>90036</td>\n",
+              "      <td>West</td>\n",
+              "      <td>Office Supplies</td>\n",
+              "      <td>Labels</td>\n",
+              "      <td>14.6200</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>6.8714</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Standard Class</td>\n",
+              "      <td>Consumer</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>Fort Lauderdale</td>\n",
+              "      <td>Florida</td>\n",
+              "      <td>33311</td>\n",
+              "      <td>South</td>\n",
+              "      <td>Furniture</td>\n",
+              "      <td>Tables</td>\n",
+              "      <td>957.5775</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0.45</td>\n",
+              "      <td>-383.0310</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Standard Class</td>\n",
+              "      <td>Consumer</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>Fort Lauderdale</td>\n",
+              "      <td>Florida</td>\n",
+              "      <td>33311</td>\n",
+              "      <td>South</td>\n",
+              "      <td>Office Supplies</td>\n",
+              "      <td>Storage</td>\n",
+              "      <td>22.3680</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.20</td>\n",
+              "      <td>2.5164</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        Ship Mode    Segment        Country  ... Quantity Discount    Profit\n",
+              "0    Second Class   Consumer  United States  ...        2     0.00   41.9136\n",
+              "1    Second Class   Consumer  United States  ...        3     0.00  219.5820\n",
+              "2    Second Class  Corporate  United States  ...        2     0.00    6.8714\n",
+              "3  Standard Class   Consumer  United States  ...        5     0.45 -383.0310\n",
+              "4  Standard Class   Consumer  United States  ...        2     0.20    2.5164\n",
+              "\n",
+              "[5 rows x 13 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -85,12 +227,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "191a591e-7dc3-4105-f8a3-89c5207c1463"
+        "outputId": "54e5e699-a771-42ff-e138-1035f43ef34c"
       },
       "source": [
         "dataset.isna().sum()"
       ],
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,7 +257,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 10
         }
       ]
     },
@@ -145,24 +287,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 286
         },
-        "outputId": "2a69858c-2f1b-42e3-f7d2-137bd9b11856"
+        "outputId": "ca9e7363-ad74-49c2-b788-b45ef531f962"
       },
       "source": [
         "sns.heatmap(dataset.corr())"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f8ae8692e80>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fb9ab59ad30>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 11
         },
         {
           "output_type": "display_data",
@@ -195,12 +337,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7d160366-7f2d-4187-8cd8-64e6220f1154"
+        "outputId": "448392e1-907c-48f6-bb26-34df2dd9ec65"
       },
       "source": [
         "dataset.info()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,12 +380,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "outputId": "a1b8c8df-f22b-4a9c-a6c4-49574326f281"
+        "outputId": "c4b3f4d4-8869-46a2-91c7-7e813231fd77"
       },
       "source": [
         "dataset.describe()"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,7 +500,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -374,7 +516,7 @@
       "source": [
         "dataset.nunique()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -410,14 +552,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c162dcec-7f15-444a-88de-e598f1ff663a"
+        "outputId": "5c01533d-4177-4278-a5b7-0ef8ce2317dd"
       },
       "source": [
         "for i in dataset.columns:\r\n",
         "  if i not in [\"Postal Code\",\"Sales\",\"Profit\"]:\r\n",
         "    print(f\"{i}: {dataset[i].unique()}\\n\")"
       ],
-      "execution_count": 195,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,7 +742,7 @@
         "  print((range[\"Profit\"]/range[\"Sales\"])*100)\r\n",
         "  print(\"\\n\")"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -617,7 +759,7 @@
         "Category = dataset.groupby([\"Category\", \"Sub-Category\"]).sum()\r\n",
         "Category"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -845,7 +987,7 @@
       "source": [
         "SalestoProfit([\"Category\", \"Sub-Category\"])"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -899,7 +1041,7 @@
       "source": [
         "dataset[dataset[\"Sub-Category\"] == \"Bookcases\"].groupby(\"Segment\").sum()"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -995,7 +1137,7 @@
       "source": [
         "dataset[dataset[\"Sub-Category\"] == \"Bookcases\"][dataset[\"Segment\"] == \"Consumer\"].groupby(\"Discount\").sum()"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1144,7 +1286,7 @@
       "source": [
         "dataset[dataset[\"Sub-Category\"] == \"Tables\"].groupby(\"Segment\").sum()"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1240,7 +1382,7 @@
       "source": [
         "dataset[dataset[\"Sub-Category\"] == \"Tables\"].groupby(\"Region\").sum()"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1345,7 +1487,7 @@
       "source": [
         "dataset[dataset[\"Sub-Category\"] == \"Tables\"].groupby(\"Discount\").sum()"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1478,7 +1620,7 @@
       "source": [
         "dataset[dataset[\"Sub-Category\"] == \"Supplies\"].groupby(\"Segment\").sum()"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1574,7 +1716,7 @@
       "source": [
         "dataset[dataset[\"Sub-Category\"] == \"Supplies\"].groupby(\"Region\").sum()"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1679,7 +1821,7 @@
       "source": [
         "dataset[dataset[\"Sub-Category\"] == \"Supplies\"][dataset[\"Segment\"] == \"Consumer\"].groupby(\"Discount\").sum()"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1788,7 +1930,7 @@
       "source": [
         "dataset.groupby(\"Segment\").sum()"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1883,7 +2025,7 @@
       "source": [
         "dataset.groupby(\"Segment\")[\"Segment\"].count()"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1930,7 +2072,7 @@
         "pd.set_option('display.max_rows', None)\r\n",
         "#pd.reset_option(“max_columns”)"
       ],
-      "execution_count": 199,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1962,7 +2104,7 @@
         "print(\"Category\", np.unique([i[0] for i in report_data]))\r\n",
         "print(\"Sub-Category\",np.unique([i[1] for i in report_data]))"
       ],
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
